--- a/roles/buildbot-worker-assets/tasks/main.yml
+++ b/roles/buildbot-worker-assets/tasks/main.yml
@@ -1,17 +1,22 @@
 ---
+
+- name: Create internal asset network
+  docker_network:
+    name: '{{ item.name }}'
+    state: present
+  loop: '{{container_networks}}'
+
 - name: Start asset server
   docker_container:
-    name: buildbot-assets
-    image: "httpd:alpine"
-    volumes:
-    - "/mnt/assets:/usr/local/apache2/htdocs/:ro"
-    ports:
-    - 80
-  register: asset_server
+    env: "{{ container_env }}"
+    hostname: "{{ hostname }}"
+    image: "{{ image_name }}"
+    name: "{{ container_name }}"
+    networks: "{{ container_networks }}"
+    ports: "{{ container_port_args }}"
+    state: started
+    volumes: "{{ container_volumes }}"
 
 - add_host:
-    name: buildbot-assets # required. The hostname/ip of the host to add to the inventory, can include a colon and a port number.
-    uri: "http://\
-      {{asset_server.ansible_facts.docker_container.NetworkSettings.Gateway}}\
-      :{{asset_server.ansible_facts.docker_container.NetworkSettings.Ports['80/tcp'][0].HostPort}}\
-      "
+    name: "{{ hostname }}"
+    uri: "http://{{ hostname }}"
