--- a/roles/docker-exim4/tasks/main.yml
+++ b/roles/docker-exim4/tasks/main.yml
@@ -104,10 +104,13 @@
 
 - name: start container
   docker_container:
-    hostname: '{{ container_addr_map.exim4.hostname }}'
-    image: '{{ exim4_image_name }}:{{ docker_image_tag }}'
     name: '{{ exim4_container_name }}'
-    ports: '{{ container_port_map.exim4.port_args }}'
+    hostname: '{{ exim4_hostname }}'
+    image: '{{ exim4_image_name }}:{{ docker_image_tag }}'
+    networks:
+      - name: '{{ docker_network_frontend }}'
+    ports: '{{ exim4_port_args }}'
+    purge_networks: true
     restart_policy: '{{ docker_restart_policy }}'
     state: started
     volumes:
