Add option to run Nexus in a container

--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -52,12 +52,16 @@
     - build
     - testssh
     - buildbot
+    - nexus
     tags:
     - docker_networking
   - name: Build the openssl Docker volume
     role: docker-openssl
     tags:
     - openssl_container
+  - name: Build and start Nexus Artifact Repository container
+    role: nexus3
+    tags: [nexus, container]
   - name: Build and start the SVN Docker container
     role: docker-svn
     svn_repos: 'ddio NCD_Release'
