Refresh of add-docker-option

--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -52,6 +52,7 @@
     - build
     - testssh
     - buildbot
+    - nexus
     tags:
     - docker_networking
   - name: Build the openssl Docker volume
