--- a/roles/docker-exim4/tasks/main.yml
+++ b/roles/docker-exim4/tasks/main.yml
@@ -110,6 +110,7 @@
       - name: '{{ docker_network_frontend }}'
     ports: '{{ exim4_port_args }}'
     image: '{{ exim4_image_name }}:{{ docker_image_tag }}'
+    purge_networks: true
     restart_policy: '{{ docker_restart_policy }}'
     state: started
     volumes:
